// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResistorCalculator should render with default state 1`] = `
<div
  className="resistor-calc"
>
  <h2>
    Resistor Calculator
  </h2>
  <h4>
    Calculates values from color codes
  </h4>
  <ResistorForm
    model={
      Resistor {
        "attributes": Object {
          "bands": 4,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
    onChange={[Function]}
  />
  <ResistorValue
    className="resistor-value"
    formatOptions={
      Object {
        "short": true,
      }
    }
    model={
      Resistor {
        "attributes": Object {
          "bands": 4,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
  />
  <ResistorSvg
    model={
      Resistor {
        "attributes": Object {
          "bands": 4,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
  />
</div>
`;

exports[`ResistorCalculator should update to 3-band resistor 1`] = `
<div
  className="resistor-calc"
>
  <h2>
    Resistor Calculator
  </h2>
  <h4>
    Calculates values from color codes
  </h4>
  <ResistorForm
    model={
      Resistor {
        "attributes": Object {
          "bands": 4,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
    onChange={[Function]}
  />
  <ResistorValue
    className="resistor-value"
    formatOptions={
      Object {
        "short": true,
      }
    }
    model={
      Resistor {
        "attributes": Object {
          "bands": 4,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
  />
  <ResistorSvg
    model={
      Resistor {
        "attributes": Object {
          "bands": 4,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
  />
</div>
`;

exports[`ResistorCalculator should update to 3-band resistor 2`] = `
<div
  className="resistor-calc"
>
  <h2>
    Resistor Calculator
  </h2>
  <h4>
    Calculates values from color codes
  </h4>
  <ResistorForm
    model={
      Resistor {
        "attributes": Object {
          "bands": 3,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
    onChange={[Function]}
  />
  <ResistorValue
    className="resistor-value"
    formatOptions={
      Object {
        "short": true,
      }
    }
    model={
      Resistor {
        "attributes": Object {
          "bands": 3,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
  />
  <ResistorSvg
    model={
      Resistor {
        "attributes": Object {
          "bands": 3,
          "digit1": 1,
          "digit2": 0,
          "digit3": 0,
          "multiplier": 0,
          "tempCoef": 250,
          "tolerance": 10,
        },
      }
    }
  />
</div>
`;
